--- a/content/src/main/content/jcr_root/etc/clientlibs/lloyds/designs/css/basic.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/lloyds/designs/css/basic.css
@@ -9,7 +9,8 @@ article {
     margin-right: 5em;
 }
 header {
-    font-size: 2.5vw;
+    font-size: 1.5em;
+    /*2.5vw*/
 }
 main {
     margin-left: 5em;
@@ -22,10 +23,19 @@ footer {
     text-align: center;
     margin: .5em;
     padding: 1em;
-    font-size: .9vw;
+    font-size: .75em;
+    /*.9vw*/
 }
 .short-desc {
     float: left;
     width: auto;
-    font-size: 1.5vw;
+    font-size: 1em;
+}
+#nonmobile-indicator {
+    display: block;
+}
+@media only screen and (min-width: 769px) {
+    #nonmobile-indicator {
+        display: block;
+    }
 }
